--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,12 +1,12 @@
-// app-MultiLevelMenu {
-//         //background-image: ;
-//         //height:100%;
-//         background-color     : lightgray; //linear-gradient(to top, rgb(200, 200, 200, 0.8), rgb(250, 250, 250, 0.8));
-//         //url(/assets/images/25years.png);
-//         //background-size: cover;
-//         //color          : white;
-//  }
-// :host{
-//     background: url('../../../../assets/images/leftimg.svg');
-
-//}
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+.maincontent{
+    flex:1;
+}
+.content{
+    width:100%;
+    float: left;
+}
